--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -1,12 +1,12 @@
       <div class="modal hide fade in" id="StartStoryModal">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
-                <h3>Start A Story</h3>
-                <div class="row">
-                  <span class="span2">1. Choose your photo</span>
-                  <span class="span2">2. Choose a categoty</span>
-                  <span class="span2">3. Write your story</span>
-                </div>
+                <h2>Start A Story</h2>
+                <ul class="row">
+                  <li class="span2"><span class="circle-color-full">1</span> Choose your photo</li>
+                  <li class="span2"><span class="circle-color-full">2</span> Choose a categoty</li>
+                  <li class="span2"><span class="circle-color-full">3</span> Write your story</li>
+                </ul>
               </div>
               <div class="modal-body">
                 <p>To start a story please upload image</p>
