--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -2,20 +2,17 @@
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
                 <h2>Start A Story</h2>
-                <ul class="row">
+                <ul class="row story-bradcrumbs">
                   <li class="span2"><span class="circle-color-full">1</span> Choose your photo</li>
-                  <li class="span2"><span class="circle-color-full">2</span> Choose a categoty</li>
-                  <li class="span2"><span class="circle-color-full">3</span> Write your story</li>
+                  <li class="span2"><span class="circle-color-full-disable">2</span> Choose a categoty</li>
+                  <li class="span2"><span class="circle-color-full-disable">3</span> Write your story</li>
                 </ul>
               </div>
               <div class="modal-body">
                 <p>To start a story please upload image</p>
                 <%= render 'layouts/image_provider' %>
               </div>
-              <div class="modal-footer">
-                <a href="#" class="btn" data-dismiss="modal">Close</a>
-                <!--<a href="#" class="btn btn-primary">Save changes</a>-->
-              </div>
+              
       </div>
       <div class="modal hide" id="start-story">
         <div class="modal-header lg">
