--- a/app/views/images/_photos.html.erb
+++ b/app/views/images/_photos.html.erb
@@ -1,13 +1,17 @@
-<h1>Please choose image and start your story</h1>
+<h3>Please choose image and start your story</h3>
 <div id="story-container" role="story-container" >
 	<ul id="portfolio-wrapper" class="row ">
 		<% @images.each do |image|%>
-			<li class="story-box container-ss span3 portfolio-item">
-				<%=  image_tag(image.image_source , width: image.width.to_s+'px' , height: image.height.to_s+'px', id: 'image_'+image.id.to_s)  %>
-				<div class="tiels-items-container">
+			<li class="story-box container-ss span2 portfolio-item ">
+				<div class="picture">
+				<a title="Start a story"><%=  image_tag(image.image_source , width: image.width.to_s+'px' , height: image.height.to_s+'px', id: 'image_'+image.id.to_s)  %>
+				<!-- <div class="tiels-items-container">
 					<a class="btn btn-small"><i class="icon-edit"></i>Start Story</a>		
-				</div>
+				</div> -->
 
+				<div class="image-overlay-start"></div>
+				</a>
+				</div>
 			</li>
 
 		<% end %>
