--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -1,6 +1,7 @@
       <div class="modal hide fade in" id="StartStoryModal">
+        
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">×</button>
+                <a class="close-modal" data-dismiss="modal"></a>
                 <h2>Start A Story</h2>
                 <ul class="row story-bradcrumbs">
                   <li class="span2"><span class="circle-color-full">1</span> Choose your photo</li>
@@ -9,10 +10,15 @@
                 </ul>
               </div>
               <div class="modal-body">
-                <p>To start a story please upload image</p>
-                <%= render 'layouts/image_provider' %>
+                <div id="uploadProviders">
+                  <p>To start a story please upload image</p>
+                  <%= render 'layouts/image_provider' %>
+                </div>
+                <div id="imageTiles"></div>
+
               </div>
-              
+              <div class="modal-footer hide"></div>
+             
       </div>
       <div class="modal hide" id="start-story">
         <div class="modal-header lg">
