just fro check out

--- a/app/views/stories/_upload_modal.html.erb
+++ b/app/views/stories/_upload_modal.html.erb
@@ -6,7 +6,7 @@
 	<%= render template: 'images/upload' %>
 </div>
 <div id="start-story-form" >
-	<%= render 'images/start_story' %>
+	<%= render 'stories/start_story' %>
 </div>
 
               
