--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,7 +55,7 @@ hr.clean {
 header {
 	background-color: $background-header;
 	border-bottom: 0;
-	height: 30px;
+	/*height: 30px;*/
 	.navbar, 
 	.navbar-inner, 
 	.nav,
@@ -69,28 +69,28 @@ header {
 	            box-shadow: none;
 		padding: 0px;
 		margin: 0;
-		height: 30px;
-		min-height:30px;
+		/*height: 30px;
+		min-height:30px;*/
 		background-color: $background-header;
 		.nav {
-			margin:0;
+			/*margin:0;*/
 			li.dropdown > .dropdown-toggle .caret {
-				margin-top: 8px;
+				/*margin-top: 8px;*/
 				border-top-color: #eee;
   			border-bottom-color: #eee;
 			}
-			> li > a {
+			/*> li > a {
 				padding:5px 15px;
-			}
+			}*/
 			.dropdown-menu a{
 				color: #000 !important;
 			}
-			.divider-vertical {
+			/*.divider-vertical {
 				height: 30px;
-			}
+			}*/
 		}
 		li {
-			height: 30px;
+			/*height: 30px;*/
 			/*line-height: 10px*/;
 			a {
 				color: #fff !important;
