--- a/app/views/layouts/register.html.erb
+++ b/app/views/layouts/register.html.erb
@@ -28,7 +28,7 @@
     </div>
     <div id="like-modal" class="modal hide"></div>
     <div id="start-story-form" class="hide" >
-      <%= render 'images/start_story' %>
+      <%= render 'stories/start_story' %>
     </div>
 
   </body>
