change start a story

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,6 @@
 
 <%= render 'layouts/feed_nav' %>
 <%= render 'layouts/title_hr' , :@hr_name => @category.name %>
+<%= render 'custom_drop_down_categories' %>
 <%= render 'feeds/feed'  %>
+
