--- a/app/views/images/_photos.html.erb
+++ b/app/views/images/_photos.html.erb
@@ -1,5 +1,5 @@
 <h3>Please choose image and start your story</h3>
-<div id="story-container" role="story-container" >
+<div id="imageForStory" role="story-container" >
 	<ul id="portfolio-wrapper" class="row ">
 		<% @images.each do |image|%>
 			<li class="story-box container-ss span2 portfolio-item ">
