--- a/app/views/layouts/_start_story_link.html.erb
+++ b/app/views/layouts/_start_story_link.html.erb
@@ -1,3 +1,3 @@
 <% if current_user %>
-<li><a data-toggle="modal" href="#StartStoryModal"><i class="mini-ico-pencil mini-white"></i> Start a story</a></li>
+<li><a class="userFunction" data-function="startStoryModal"><i class="mini-ico-pencil mini-white"></i> Start a story</a></li>
 <%end%>
