--- a/app/views/stories/_start_story.html.erb
+++ b/app/views/stories/_start_story.html.erb
@@ -10,7 +10,7 @@
 		</li>
 		<li><span class="counter-text">55 words left out of 55</span></li>
 		<li>
-			<textarea name='story[storyline][line]' placeholder="Write here..."></textarea>
+			<textarea name='story_line[line]' placeholder="Write here..."></textarea>
 			
 		</li>
 		<li>
