--- a/app/views/stories/testform.html.erb
+++ b/app/views/stories/testform.html.erb
@@ -4,6 +4,15 @@
 }
 </style>
 
-<div id="StartStoryModal">
+<div id="StartStoryModal" class="collapse in">
 <%= render 'start_story'%>
+
+
+<button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#StartStoryModal">
+  simple collapsible
+</button>
+ 
+
+
+
 </div>
