--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -1,7 +1,6 @@
       <div class="modal hide fade in" id="StartStoryModal">
-        
+              <a class="close-modal" data-dismiss="modal"></a>
               <div class="modal-header">
-                <a class="close-modal" data-dismiss="modal"></a>
                 <h2>Start A Story</h2>
                 <ul class="row story-bradcrumbs">
                   <li class="span2"><span class="circle-color-full">1</span> Choose your photo</li>
@@ -16,16 +15,13 @@
                 </div>
                 <div id="imageTiles"></div>
 
+                <div class="hide" id="start-story">
+                  <%= render 'stories/start_story'%>
+                </div>
+
               </div>
               <div class="modal-footer hide"></div>
              
       </div>
-      <div class="modal hide" id="start-story">
-        <div class="modal-header lg">
-          <button type="button" class="close" data-dismiss="modal">×</button>
-          <h2>Start A Story</h2>
-        </div>
-        <div id="start-story-container"></div>
-         
-      </div>
+      
       
