--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -3,7 +3,7 @@
               <div class="modal-header">
                 <h2>Start A Story</h2>
                 <ul class="row story-bradcrumbs">
-                  <li class="span2"><span class="circle-color-full">1</span> Choose your photo</li>
+                  <li class="span2 current-crumbs"><span class="circle-color-full-disable">1</span> Choose your photo</li>
                   <li class="span2"><span class="circle-color-full-disable">2</span> Choose a categoty</li>
                   <li class="span2"><span class="circle-color-full-disable">3</span> Write your story</li>
                 </ul>
