--- a/app/views/layouts/_image_provider.html.erb
+++ b/app/views/layouts/_image_provider.html.erb
@@ -1,7 +1,7 @@
 				<ul class="row logo-images show-grid">
                   
                     <li class="span2">
-                         <%= link_to(facebook_url, remote: true) do %>
+                         <%= link_to(facebook_url, remote: true , before: "$('#StartStoryModal .preloader').toggle()" , :complete => "$('#StartStoryModal .preloader').toggle()") do %>
                               <span class="social-upload upload-facebook"></span>Facebook
                          <%end%>
                     	<%#= link_to image_tag('logos/facebook_logo.jpg'),in_wizard ? import_facebook_wizard_url : facebook_path %>
