--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -1,16 +1,18 @@
       <div class="modal hide fade in" id="StartStoryModal">
               <a class="close-modal" data-dismiss="modal"></a>
+              <div class="preloader hide"></div>
               <div class="modal-header">
                 <h2>Start A Story</h2>
                 <ul class="row story-bradcrumbs">
-                  <li class="span2 current-crumbs"><span class="circle-color-full-disable">1</span> Choose your photo</li>
-                  <li class="span2"><span class="circle-color-full-disable">2</span> Choose a categoty</li>
-                  <li class="span2"><span class="circle-color-full-disable">3</span> Write your story</li>
+                  <li class="span2 current-crumbs"><span class="circle-color-full-disable">1</span> Choose a photo</li>
+                  <li class="span2"><span class="circle-color-full-disable">2</span> Write your story</li>
+                  <li class="span2"><span class="circle-color-full-disable">3</span> Post it</li>
                 </ul>
               </div>
               <div class="modal-body">
+
                 <div id="uploadProviders">
-                  <p>To start a story please upload image</p>
+                  <p>To start a story please upload photo</p>
                   <%= render 'layouts/image_provider' %>
                 </div>
                 <div id="imageTiles"></div>
