--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -3,11 +3,12 @@
               <div class="preloader hide"></div>
               <div class="modal-header">
                 <h2>Start A Story</h2>
+                <!-- <h2>Start A Story</h2>
                 <ul class="row story-bradcrumbs">
                   <li class="span2 current-crumbs"><span class="circle-color-full-disable">1</span> Choose a photo</li>
                   <li class="span2"><span class="circle-color-full-disable">2</span> Write your story</li>
                   <li class="span2"><span class="circle-color-full-disable">3</span> Post it</li>
-                </ul>
+                </ul> -->
               </div>
               <div class="modal-body">
 
